--- a/video5.html
+++ b/video5.html
@@ -9,6 +9,7 @@
     <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
 
     <link rel="import" href="elements.html">
+    <link rel="import" href="elements-two.html">
     <style>
         body {
             font-family: sans-serif;
@@ -26,10 +27,10 @@
         <core-drawer-panel id="drawerPanel">
             <core-header-panel drawer>
                 <core-toolbar>Menu</core-toolbar>
-                <core-menu selected="{{ selected }}">
-                    <core-item label="One"></core-item>
-                    <core-item label="Two"></core-item>
-                    <core-item label="Three"></core-item>
+                <core-menu valueattr="data-category" selected="{{ selected }}">
+                    <core-item data-category="home" label="home"></core-item>
+                    <core-item data-category="portfolio" label="portfolio"></core-item>
+                    <core-item data-category="contact" label="contact"></core-item>
                 </core-menu>
             </core-header-panel>
 
@@ -40,6 +41,20 @@
                 </core-toolbar>
                 <div class="container">
                     You're on page: {{ selected }}
+                    <core-pages selected="{{ selected }}" valueattr="data-category">
+                        <section data-category="home">
+                            <h1>Home</h1>
+                            <div>Home Content</div>
+                        </section>
+                        <section data-category="portfolio">
+                            <h1>Portfolio</h1>
+                            <div>Portfolio Content</div>
+                        </section>
+                        <section data-category="contact">
+                            <h1>Contact</h1>
+                            <div>Contact Content</div>
+                        </section>
+                    </core-pages>
                 </div>
             </core-header-panel>
         </core-drawer-panel>
@@ -47,13 +62,10 @@
 
     <!-- Video 8 The Awesome Power of Auto-Binding Templates -->
     <script>
-            var tmpl = document.querySelector('#tmpl');
-            tmpl.appTitle = 'Hello Users';
-            tmpl.selected = 0;
+        var tmpl = document.querySelector('#tmpl');
+        tmpl.appTitle = 'Hello Users';
+        tmpl.selected = 'home'; //Seta home como página inicial
 
-        tmpl.addEventListener('template-bound', function(){
-            console.log(document.querySelector('core-menu'));
-        });
     </script>
 </body>
 </html>
