--- a/video9.html
+++ b/video9.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+    <head>
+        <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, inititial-scale=1.0"/>
+        <meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="mobile-web-app-capable" content="yes"/>
 
-</body>
+        <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
+
+        <link rel="import" href="elements-two.html">
+        <style>
+        </style>
+    </head>
+    <body unresolved>
+        <core-pages selected="contact" valueattr="data-category">
+            <section data-category="home">
+                <h1>Home</h1>
+                <div>Home Content</div>
+            </section>
+            <section data-category="portfolio">
+                <h1>Portfolio</h1>
+                <div>Portfolio Content</div>
+            </section>
+            <section data-category="contact">
+                <h1>Contact</h1>
+                <div>Contact Content</div>
+            </section>
+        </core-pages>
+
+        <script>
+        </script>
+    </body>
 </html>
