--- a/elements.html
+++ b/elements.html
@@ -6,3 +6,8 @@
 <link rel="import" href="bower_components/core-drawer-panel/core-drawer-panel.html"/>
 <link rel="import" href="bower_components/core-menu/core-menu.html"/>
 <link rel="import" href="bower_components/core-item/core-item.html"/>
+
+<!-- Video 11 -->
+<link rel="import" href="routes.html"/>
+
+
