--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1"/>
-    <meta name="viewport" content="width=device-width, inititial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="apple-mobile-web-app-capable"/>
     <meta name="mobile-web-app-capable"/>
 
